infrastructure/storage/longhorn/middleware-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-auth  
    removeHeader: true
