infrastructure/storage/longhorn/ingressroute-longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.lab`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: basic-auth
          namespace: traefik   # Namespace eurer bestehenden middleware-basic-auth anpassen
  tls:
    secretName: longhorn-tls
